test/libsolidity/syntaxTests/nameAndTypeResolution/527_fallback_marked_internal.sol
contract C {
    fallback () internal { }
}
// ----
// TypeError 1159: (17-41='fallback () internal { }'): Fallback function must be defined as "external".
